# tool-collections

./: README.md  contracr-review.md  contracr_review.md  contract_draft.md  contract_draft_template.md  contract_extract.md  docker-compose.yml  import_jsonl.md
backend-go/: .dockerignore  .gitignore  Makefile  Makefile.bat  README.md  go.mod
backend-go/cmd/: main.go
backend-go/configs/: .env
backend-go/docker/: Dockerfile
frontend/: .env.staging  Makefile  Makefile.bat  README.md  package-lock.json  package.json  run.sh  vue.config.js
frontend/docker/: Dockerfile  nginx.conf
frontend/public/: index.html
frontend/src/: App.vue  constants.js
markitdown-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  build.sh  config.py  docker-compose-single.yml  pyproject.toml  requirements.txt  tasks.py
markitdown-api/tests/: test.sh
text-parse/markitdown-api/: .dockerignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  tasks.py
text-parse/md2docx-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  config.py  docker-compose.yml  models.py  requirements.txt  tasks.py
text-parse/textparse-api/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build.sh  config.py  docker-compose.yml  models.py  requirements.txt
textparse-api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
textparse-api/app/: converter.py  main.py  models.py  utils.py
weekly-assistant/backend-go/: .gitignore  README.md  (+2 more)
(+135 files in other folders)
