[project]
name = "markitdown-api"
version = "v1.0.0"
description = "office转md"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "n"
readme = "README.md"
requires-python = "3.14.4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
